tests/negative/test_expr_ind_res_undef.orb
data Foo;

fnc main () () {
    sym x:(Foo []);
    [] x 0;
};